Corrected spacing between the controls

--- a/KoteiKatoM.css
+++ b/KoteiKatoM.css
@@ -105,12 +105,12 @@ touch-action: none;
 }
 
 #control-panel{
-  margin-left: 120px;
+  margin-left: 105px;
   display: flex;
   flex-direction: row;
   justify-content: center; /* Centers horizontally */
   align-items: flex-start; /* Keeps them at the top */
-  gap: 90px;               /* Space between the two grids */
+  gap: 65px;               /* Space between the two grids */
   padding-bottom: 22%;       /* Margin from the very top of the page */
   width: 75%;
 }
